--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Collaborator #1: Create a header for the webpage-->
 
     <!-- Collaborator #2: Find an image to add to the webpage -->
-
+    <img src="https://via.placeholder.com/150">
     <!-- Collaborator #3: Add a link to the webpage -->
 
     <!-- All Collaborators: Add some text to the page-->
