--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 
     <!-- Collaborator #2: Find an image to add to the webpage -->
 
-    <!-- Collaborator #3: Add a link to the webpage -->
 
+    <!-- Collaborator #3: Add a link to the webpage -->
+    <a href="https://www.google.com">button>Click me</button>
+        
     <!-- All Collaborators: Add some text to the page-->
 
 </body>
