--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <!-- Collaborator #3: Add a link to the webpage -->
 
     <!-- All Collaborators: Add some text to the page-->
-
+<div>
+    <script src="script.js"></script>
+</div>
 </body>
 </html>
