--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Time to Collaborate</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,21 +18,24 @@
 
     <!-- Collaborator #1: Create a header for the webpage-->
 <h1>Header For Our Website!</h1>
-    <!-- Collaborator #2: Find an image to add to the webpage -->
-
-    <img src="https://via.placeholder.com/150">
-    <!-- Collaborator #3: Add a link to the webpage -->
-
-
-
-
-    <!-- Collaborator #3: Add a link to the webpage -->
-    <a href="https://www.google.com">button>Click me</button>
-        
-    <!-- All Collaborators: Add some text to the page-->
-<div>
+<div class="container">
+    <div class="row justify-content-center">
+      <div class="col-3 job-interest">
+        First in DOM, no order applied
+      </div>
+      <div class="col-3  job-interest order-5">
+        Second in DOM, with a larger order
+      </div>
+      <div class="col-3  job-interest order-1">
+        Third in DOM, with an order of 1
+      </div>
+    </div>
+  </div>
     <script src="script.js"></script>
 </div>
+
 </body>
+
+
 
 </html>
