hide and show buttons

--- a/index.html
+++ b/index.html
@@ -26,9 +26,13 @@
 
 
     <!-- Collaborator #3: Add a link to the webpage -->
-    <a href="https://www.google.com">button>Click me</button>
+
         
     <!-- All Collaborators: Add some text to the page-->
+    <button id="button1" onclick="showbutton()">Yes</button>
+
+        <button id="button2" >Yes number 2</button>
+
 <div>
     <script src="script.js"></script>
 </div>
