--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
             </div>
         </div>
     </nav>
-    <div class="container">
-        <div class="row justify-content-center">
+    <!-- <div class="container"> -->
+        <div class="row justify-content-between">
             <div class="col-3 job-interest">
                 First in DOM, no order applied
                 <img src="./assets/Tutoring.jpg" />
@@ -64,6 +64,19 @@
             <div class="col-3  job-interest order-1">
                 Third in DOM, with an order of 1
             </div>
+        </div>
+    <!-- </div> -->
+
+    <div class="container">100% wide until small breakpoint</div>
+    <div class="container">100% wide until medium breakpoint</div>
+    <div class="container">100% wide until large breakpoint</div>
+    <div class="container">100% wide until extra large breakpoint</div>
+    <div class="container">
+        <div class="row">
+            <div class="col-4 red">first column</div>
+            <div class="col-4 red">second column</div>
+            <div class="col-4 red">third column</div>
+            <div class="col-4 red">fourth column</div>
         </div>
     </div>
 
