--- a/index.html
+++ b/index.html
@@ -176,28 +176,28 @@
                 <h2 class="col-12">Take The Job Quiz</h2>
                 <p><img class="quiz-img" src="./assets/Tutoring.jpg" style="width:170px;height:170px;margin-left:15px;">
 
-            <div class="row justify-content-around">
+            <div class="row justify-content-around allbuttons">
                 <p>Customized Job Selector</p>
          
 
-                <div class="col-6 "><buttonn class="btn btn-success w-50" id="mainb1" onclick="showbutton()">Desk Job</button></div>
-                <div class="col-6 "><button class="btn btn-danger w-50" id="mainb2" onclick="showbutton2()">Manual Labor</button></div>
-                <div class="col-3 " id="subb1"> <button class="btn btn-success w-50" onclick="showbutton3()">Corporate</button></div>
-                <div class="col-3 " id="subb2">  <button class="btn btn-success w-50" onclick="showbutton4()">Communal</button></div>
-                <div class="col-3 " id="subb3">  <button class="btn btn-success w-50" onclick="showbutton5()">Heavy lifting</button></div>
-                <div class="col-3 " id="subb4">  <button class="btn btn-success w-50" onclick="showbutton6()">Specialized Trade</button></div>
-                <div class="col-2 "  id="ssubb1"> <button class="btn btn-success w-50">Banker</button></div>
-                <div class="col-2 " id="ssubb2">  <button class="btn btn-success w-50" >Software Engineer</button></div>
-                <div class="col-2 " id="ssubb3">  <button class="btn btn-success w-50" >Data Anylist</button></div>
-                <div class="col-2 " id="ssubb4">  <button class="btn btn-success w-50" >Construction Worker</button></div>
-                <div class="col-2 " id="ssubb5">  <button class="btn btn-success w-50" >Shelf Stocker</button></div>
-                <div class="col-2 " id="ssubb6">  <button class="btn btn-success w-50" >Bodybuilder</button></div>
-                <div class="col-2 "  id="ssubb7"> <button class="btn btn-success w-50">Pastor</button></div>
-                <div class="col-2 " id="ssubb8">  <button class="btn btn-success w-50" >Teacher</button></div>
-                <div class="col-2 " id="ssubb9">  <button class="btn btn-success w-50" >Motivational Speaker</button></div>
-                <div class="col-2 " id="ssubb10">  <button class="btn btn-success w-50" >Plumber</button></div>
-                <div class="col-2 " id="ssubb11">  <button class="btn btn-success w-50" >Electrician</button></div>
-                <div class="col-2 " id="ssubb12">  <button class="btn btn-success w-50" >Painter</button></div>
+                <div class="col-6 "><buttonn class="btn btn-success" id="mainb1" onclick="showbutton()">Desk Job</button></div>
+                <div class="col-6 "><button class="btn btn-danger" id="mainb2" onclick="showbutton2()">Manual Labor</button></div>
+                <div class="col-3 " id="subb1"> <button class="btn btn-success" onclick="showbutton3()">Corporate</button></div>
+                <div class="col-3 " id="subb2">  <button class="btn btn-success" onclick="showbutton4()">Communal</button></div>
+                <div class="col-3 " id="subb3">  <button class="btn btn-success" onclick="showbutton5()">Heavy lifting</button></div>
+                <div class="col-3 " id="subb4">  <button class="btn btn-success" onclick="showbutton6()">Specialized Trade</button></div>
+                <div class="col-2 "  id="ssubb1"> <button class="btn btn-success">Banker</button></div>
+                <div class="col-2 " id="ssubb2">  <button class="btn btn-success" >Software Engineer</button></div>
+                <div class="col-2 " id="ssubb3">  <button class="btn btn-success" >Data Anylist</button></div>
+                <div class="col-2 " id="ssubb4">  <button class="btn btn-success" >Construction Worker</button></div>
+                <div class="col-2 " id="ssubb5">  <button class="btn btn-success" >Shelf Stocker</button></div>
+                <div class="col-2 " id="ssubb6">  <button class="btn btn-success" >Bodybuilder</button></div>
+                <div class="col-2 "  id="ssubb7"> <button class="btn btn-success">Pastor</button></div>
+                <div class="col-2 " id="ssubb8">  <button class="btn btn-success" >Teacher</button></div>
+                <div class="col-2 " id="ssubb9">  <button class="btn btn-success" >Motivational Speaker</button></div>
+                <div class="col-2 " id="ssubb10">  <button class="btn btn-success" >Plumber</button></div>
+                <div class="col-2 " id="ssubb11">  <button class="btn btn-success" >Electrician</button></div>
+                <div class="col-2 " id="ssubb12">  <button class="btn btn-success" >Painter</button></div>
             </div>
 
     </div>
