Adding the final edits of the website before publication

--- a/index.html
+++ b/index.html
@@ -31,9 +31,6 @@
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="creators.html">Creators</a>
-                    </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
@@ -42,7 +39,7 @@
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                             <li><a class="dropdown-item" href="https://www.snagajob.com/search/q-teen">Snagjob</a></li>
                             <li><a class="dropdown-item" href="https://www.google.com/search?q=retail+jobs+for+teens&sxsrf=ALiCzsYaLhxdDTEPvdyyb5RvCLPw7ZIORQ:1658150707009&source=lnms&tbm=isch&sa=X&ved=2ahUKEwiLgoDfxIL5AhWtD0QIHZpSCEUQ_AUoAXoECAEQAw&biw=1439&bih=694&dpr=2#imgrc=FZ5JVOtd5k9Q2M"> 4 Smart Ways to Hire Teenagers This Summer</a></li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                            <li><a class="dropdown-item" href="https://www.indeed.com/jobs?q=Teen&mna=5&aceid&gclid=Cj0KCQjwidSWBhDdARIsAIoTVb33wyRMRuvnW3MUasXdtJqpyVaQKOSHdPZ-xDKtlZWzpsdUJ7XOIOsaAg_kEALw_wcB&vjk=e70d4aba2ca53bd4">Indeed Teen Job Finder</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -86,11 +83,12 @@
             <p>Tutoring is a great job for teens just wanting to make some money on their own grounds. If you become a tutor, you can develop your own rates of payment and be your own boss to only work during the hours that work for you!</p>
         </div>
         <div class="col-3  job-interest order-5">
-            <img src="./assets/babysitting.jpg" />
-            <p></p>
+            <img class="w-100" src="./assets/babysitting.jpg" />
+            <p>Babysitting is a great job for people who have plenty of time after school and love kids! If you enjoy these things, youre in luck because babysitters also create their own rates!</p>
         </div>
         <div class="col-3  job-interest order-1">
-            Third in DOM, with an order of 1
+            <img class="w-100" src="./assets/happy.jpg" />
+            <p> There are many other jobs that teens can get, these are just a few ideas. For more ideas, please look to the source tab in the NavBar to see our sources and more helpful websites! </p>
         </div>
     </div>
     
